--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ repositories {
 
 dependencies {
     implementation 'junit:junit:4.13.1'
+    implementation 'mysql:mysql-connector-java:5.1.48'
     testImplementation('org.junit.jupiter:junit-jupiter:5.6.0')
 }
 
