--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,9 @@ repositories {
 }
 
 dependencies {
-    implementation 'junit:junit:4.13.1'
-    testImplementation('org.junit.jupiter:junit-jupiter:5.6.0')
+    implementation 'junit:junit:4.13.2'
+    implementation 'mysql:mysql-connector-java:8.0.30'
+    testImplementation('org.junit.jupiter:junit-jupiter:5.9.0')
 }
 
 test {
