--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,8 @@ repositories {
 dependencies {
     implementation 'junit:junit:4.13.2'
     implementation 'mysql:mysql-connector-java:8.0.30'
+    implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+    implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
     testImplementation('org.junit.jupiter:junit-jupiter:5.9.0')
 }
 
